<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nextr_page"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:gravity="center"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#0091EA"
        android:gravity="center"
        android:text="@string/LOGIN"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thnks"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:background="@color/black"
        android:textColor="@color/white"
        />
    <Button
        android:id="@+id/btnreenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Re_enter"
        android:layout_margin="15dp"/>

</LinearLayout>